# RootDetector

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNI.cpp  RootDetector.cpp  RootDetector.h
app/src/main/java/com/rootdetector/app/: MainActivity.kt  RootDetector.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
